--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,10 @@
       "headers": {
         "cache-control": "public, max-age=31536000, immutable"
       }
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/"
     }
   ]
 }
